--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "postinstall": "prisma generate",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -19,6 +20,7 @@
     "clsx": "^2.0.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
+    "postinstall": "^0.9.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
