--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "ts-node ./node_modules/typeorm/cli",
-		"migration:create": "typeorm migration:create migrations/$npm_config_name",
-		"migration:run": "npm run typeorm migration:run -- -d ./config/typeorm.config.ts",
-		"migration:revert": "npm run typeorm -- -d ./config/typeorm.config.ts migration:revert"
+    "migration:create": "typeorm migration:create migrations/$npm_config_name",
+    "migration:run": "npm run typeorm migration:run -- -d ./config/typeorm.config.ts",
+    "migration:revert": "npm run typeorm -- -d ./config/typeorm.config.ts migration:revert"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -36,6 +36,7 @@
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "fs": "^0.0.1-security",
     "lodash": "^4.17.21",
@@ -56,6 +57,7 @@
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
+    "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
