--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,12 +3,12 @@ name: Deploy to Render
 on:
   push:
     branches:
-      - main  # Trigger deploy on pushes to the 'main' branch
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    environment: Production  # Use your production environment name in GitHub Actions
+    environment: Production
 
     steps:
     - name: Checkout code
@@ -17,7 +17,7 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '22'  # Use your desired Node.js version
+        node-version: '22'
 
     - name: Install dependencies
       run: npm install
@@ -29,5 +29,5 @@ jobs:
       run: |
         curl -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
           -X POST \
-          -d '{"service_id": "srv-d0eu4l6mcj7s73889bg0"}' \  # Your actual service ID
-          https://api.render.com/v1/services/srv-d0eu4l6mcj7s73889bg0/deploys  # Your actual service ID
+          -d '{"service_id": "srv-d0eu4l6mcj7s73889bg0"}' \
+          https://api.render.com/v1/services/srv-d0eu4l6mcj7s73889bg0/deploys
