--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "fs": "^0.0.1-security",
+    "ioredis": "^5.6.1",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "passport-jwt": "^4.0.1",
