--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ioredis": "^5.6.1",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
+    "nodemailer": "^7.0.3",
     "passport-jwt": "^4.0.1",
     "path": "^0.12.7",
     "pg": "^8.13.3",
