--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-socket.io": "^11.1.3",
     "@nestjs/typeorm": "^11.0.0",
+    "@nestjs/websockets": "^11.1.3",
     "@sendgrid/mail": "^8.1.4",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
@@ -50,6 +52,7 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "sharp": "^0.33.5",
+    "socket.io": "^4.8.1",
     "typeorm": "^0.3.21"
   },
   "devDependencies": {
