--- a/package.json
+++ b/package.json
@@ -37,14 +37,17 @@
     "@nestjs/websockets": "^11.1.3",
     "@sendgrid/mail": "^8.1.4",
     "bcryptjs": "^3.0.2",
+    "buffer-to-stream": "^1.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "fs": "^0.0.1-security",
     "ioredis": "^5.6.1",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
+    "multer": "^2.0.1",
     "nodemailer": "^7.0.3",
     "passport-jwt": "^4.0.1",
     "path": "^0.12.7",
@@ -65,6 +68,7 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/multer": "^1.4.13",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
