--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^11.1.3",
     "@sendgrid/mail": "^8.1.4",
+    "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "buffer-to-stream": "^1.0.0",
     "class-transformer": "^0.5.1",
