--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "path": "^0.12.7",
     "pg": "^8.13.3",
     "reflect-metadata": "^0.2.2",
+    "resend": "^6.5.2",
     "rxjs": "^7.8.1",
     "sharp": "^0.33.5",
     "socket.io": "^4.8.1",
